<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="contactsIconLabel">Contacts</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerIconLabel">Dialer</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="fdn_contact_invalid">Invalid contact name or number.</string>
    <string name="fdn_contact_name_number_invalid">Name and number can not be empty at the same time.</string>
    <string name="fdn_contact_number_invalid">Invalid contact number.</string>
    <string name="fdn_phone_book_busy">Phone book is busy now,please try later.</string>
    <string name="mobile_network_tab_activity_title">Mobile network settings</string>
    <string name="gemini_mobile_network_sim1_tab_tag">SIM1</string>
    <string name="gemini_mobile_network_sim1_tab_label">SIM1</string>
    <string name="gemini_mobile_network_sim2_tab_tag">SIM2</string>
    <string name="gemini_mobile_network_sim2_tab_label">SIM2</string>
    <string name="gemini_simid">simId</string>
    <string name="sim_1">0</string>
    <string name="sim_2">1</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">Barred call</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">CDMA: Phone locked until power cycle.</string>
    <string name="callFailed_cdma_drop">CDMA: Call dropped.</string>
    <string name="callFailed_cdma_intercept">CDMA: Call intercepted.</string>
    <string name="callFailed_cdma_reorder">CDMA: reorder.</string>
    <string name="callFailed_cdma_SO_reject">CDMA: Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">CDMA: retry order.</string>
    <string name="callFailed_cdma_accessFailure">CDMA: Access failure.</string>
    <string name="callFailed_cdma_preempted">CDMA: Preempted.</string>
    <string name="callFailed_cdma_notEmergency">Only Emergency calls are possible.</string>
    <string name="callFailed_unobtainable_number">Invalid Number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running\u2026</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="menu_speaker">Speaker</string>
    <string name="menu_more">More</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_bluetooth_on">Bluetooth on</string>
    <string name="menu_bluetooth_off">Bluetooth off</string>
    <string name="menu_mute">Mute</string>
    <string name="menu_hold">Hold</string>
    <string name="menu_unhold">Unhold</string>
    <string name="menu_endCall">End</string>
    <string name="menu_swapCalls">Swap calls</string>
    <string name="menu_mergeCalls">Merge calls</string>
    <string name="menu_addCall">Add call</string>
    <string name="menu_manageConference">Manage conference call</string>
    <string name="menu_showDialpad">Dialpad</string>
    <string name="menu_hideDialpad">Dialpad</string>
    <string name="menu_answerAndHold">Hold current call\n&amp; answer</string>
    <string name="menu_answerAndEnd">End current call\n&amp; answer</string>
    <string name="ok">OK</string>
    <string name="menuButtonHint">Press Menu for call options.</string>
    <string name="menuButtonKeyboardDialHint">"Press Menu for call options  \u2022  Use keyboard to dial"</string>
    <string name="menu_answer">Answer</string>
    <string name="menu_ignore">Ignore</string>
    <string name="menu_disconnect_hold">End held</string>
    <string name="menu_disconnect_all">End all</string>
    <string name="menu_ect">Transfer</string>
    <string name="menu_answer_end_active">Answer, End Active</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending Tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace the wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="dialer_emptyListWorking">Loading\u2026</string>
    <string name="enterPin">Type PIN code to unlock SIM card.</string>
    <string name="pinUnlocked">SIM unlocked</string>
    <string name="enterNewPin">New SIM PIN code</string>
    <string name="verifyNewPin">Type new SIM PIN code again to confirm</string>
    <string name="verifyFailed">The SIM PINs you typed do not match. Please try again.</string>
    <string name="enterPuk">Type PUK code to unlock SIM card</string>
    <string name="badPuk">Incorrect PUK code!</string>
    <string name="buttonTxtContinue">Continue</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking\u2026</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock\u2026</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="call_additional_sum">Phone number and call waiting settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Voice call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="mo_code_unconditional_cf_active">Call forwarding\nunconditional activated</string>
    <string name="mo_code_some_cf_active">Call Forwarding\nOn Conditional</string>
    <string name="mo_code_call_forwarded">Call forwarded</string>
    <string name="mo_code_call_is_waiting">Waiting call</string>
    <string name="mo_code_cug_call">Closed User Group</string>
    <string name="mo_code_outgoing_calls_barred">Outgoing call barred</string>
    <string name="mo_code_incoming_calls_barred">Incoming call barred</string>
    <string name="mo_code_clir_suppression_rejected">Check caller ID sending service</string>
    <string name="mo_code_call_deflected">call Call transferred</string>
    <string name="mt_code_forwarded_call">It is a forwarded call</string>
    <string name="mt_code_cug_call">Closed User Group</string>
    <string name="mt_code_call_on_hold">Call held</string>
    <string name="mt_code_call_retrieved">Call retrieved</string>
    <string name="mt_code_multi_party_call">Conference call</string>
    <string name="mt_code_on_hold_call_released">Held call released</string>
    <string name="mt_code_forward_check_received">Forward check SS message received</string>
    <string name="mt_code_call_connecting_ect">Call transferring</string>
    <string name="mt_code_call_connected_ect">Call transfer active</string>
    <string name="mt_code_deflected_call">It is a deflected call</string>
    <string name="mt_code_additional_call_forwarded">Additional incoming call forwarded</string>
    <string name="mt_code_forwarded_cf">Call forwarded</string>
    <string name="mt_code_forwarded_cf_uncond">Call forwarded on unconditional</string>
    <string name="mt_code_forwarded_cf_cond">Call forwarded on conditional</string>
    <string name="mt_code_forwarded_cf_busy">Call busy forwarded</string>
    <string name="mt_code_forwarded_cf_no_reply">Call forwarded on not reply</string>
    <string name="mt_code_forwarded_cf_not_reachable">Call forwarded on not reachable</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
    <string name="sum_cfu_enabled">Forwarding all calls to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="onscreenHoldText">Hold</string>
    <string name="onscreenEndCallText">End</string>
    <string name="onscreenShowDialpadText">Dialpad</string>
    <string name="onscreenSpeakerText">Speaker</string>
    <string name="onscreenMuteText">Mute</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="onscreenSwapCallsText">Swap</string>
    <string name="vt_video_call">Video call</string>
    <string name="incoming_call_widget_answer_text">Answer</string>
    <string name="incoming_call_widget_reject_text">Reject</string>
</resources>